--- a/Arc_Ai/Arc_Ai/core/templates/core/landingpage.html
+++ b/Arc_Ai/Arc_Ai/core/templates/core/landingpage.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -117,23 +119,23 @@
           <p><strong>Ginno Arostique</strong><br><span>Frontend</span></p>
         </div>
         <div class="dev-card">
-          <img src="{% static 'Images/Logo.png' %}" alt="Zuriel Calix">
+          <img src="{% static 'Images/avatar.png' %}" alt="Zuriel Calix">
           <p><strong>Zuriel Calix</strong><br><span>Frontend</span></p>
         </div>
         <div class="dev-card">
-          <img src="{% static 'Images/Logo.png' %}" alt="Herald Amolong">
+          <img src="{% static 'Images/avatar.png' %}" alt="Herald Amolong">
           <p><strong>Herald Amolong</strong><br><span>Frontend</span></p>
         </div>
         <div class="dev-card">
-          <img src="{% static 'Images/Logo.png' %}" alt="Joseph Cordero">
+          <img src="{% static 'Images/avatar.png' %}" alt="Joseph Cordero">
           <p><strong>Joseph Cordero</strong><br><span>Backend</span></p>
         </div>
         <div class="dev-card">
-          <img src="{% static 'Images/Logo.png' %}" alt="Christian Pillado">
+          <img src="{% static 'Images/avatar.png' %}" alt="Christian Pillado">
           <p><strong>Christian Pillado</strong><br><span>Backend</span></p>
         </div>
         <div class="dev-card">
-          <img src="{% static 'Images/Logo.png' %}" alt="Ginno Arostique">
+          <img src="{% static 'Images/avatar.png' %}" alt="Ginno Arostique">
           <p><strong>Ivan Sagala</strong><br><span>Frontend</span></p>
         </div>
       </div>
