--- a/Arc_Ai/Arc_Ai/core/templates/core/email.html
+++ b/Arc_Ai/Arc_Ai/core/templates/core/email.html
@@ -60,7 +60,7 @@
             </div>
             <div class="nav_item">
                 <img class="sidebar_icns" src="{% static 'Images/Notification.png' %}" alt="Notification">
-                <p>Notification</p>
+                <p id="notification_paragraph">Notification</p>
             </div>
             <div class="nav_item">
                 <img class="sidebar_icns" src="{% static 'Images/Settings.png' %}" alt="Settings">
