--- a/Arc_Ai/Arc_Ai/core/templates/core/organization.html
+++ b/Arc_Ai/Arc_Ai/core/templates/core/organization.html
@@ -57,11 +57,11 @@
     <div id="sidebar_icns_grp">
         <div class="nav_item">
             <img id="nav_icon" class="sidebar_icns" style="margin-bottom: -6px;" src="{% static 'Images/Navigation.png' %}" alt="Navigate">
-            <p>Navigate</p>
+            <p id="navigation_paragraph">Navigate</p>
         </div>
         <div class="nav_item">
             <img class="sidebar_icns" src="{% static 'Images/Notification.png' %}" alt="Notification">
-            <p>Notification</p>
+            <p id="notification_paragraph">Notification</p>
         </div>
         <div class="nav_item">
             <img class="sidebar_icns" src="{% static 'Images/Settings.png' %}" alt="Settings">
