sidebar designed(unfinished) Pa refine

--- a/Arc_Ai/Arc_Ai/core/templates/core/organization.html
+++ b/Arc_Ai/Arc_Ai/core/templates/core/organization.html
@@ -22,35 +22,46 @@
 
     <div class="notification_container">
       <!-- Notification Pop-Up -->
-        <div id="notification_popup" class="hidden">
-          <div id="notification_list">
-              <h2>Notifications</h2>
-              <ul>
-                  <li class="notification_item" data-detail="General meeting at 10:30 AM on January 3, 2024, will be held in the main conference room. All employees are expected to attend this important session where key company updates and strategic initiatives for the upcoming year will be discussed.">
-                      <p>Schedule Update</p>
-                      <span>Yesterday</span>
-                  </li>
-                  <li class="notification_item" data-detail="Another meeting detail here.">
-                      <p>Schedule Update</p>
-                      <span>Yesterday</span>
-                  </li>
-                  <li class="notification_item" data-detail="Another meeting detail here.">
-                    <p>Schedule Update</p>
-                    <span>Yesterday</span>
-                  </li>
-                  <li class="notification_item" data-detail="Another meeting detail here.">
-                    <p>Schedule Update</p>
-                    <span>Yesterday</span>
-                  </li>
-              </ul>
-          </div>
-          <button id="close_notification_popup">Close</button>
-      </div>
+      <div id="notification_popup" class="hidden">
+        <h2>Notifications</h2><button id="close_notification_popup" class="close-btn">&times;</button>
+        <div id="notification_list">
+            <ul>
+                <li class="notification_item" data-detail="General meeting at 10:30 AM on January 3, 2024, will be held in the main conference room. All employees are expected to attend this important session where key company updates and strategic initiatives for the upcoming year will be discussed.">
+                    <p>Schedule Update <span>Yesterday</span></p>
+                    <p class="short-description">General meeting at 10:30AM on Jan 3, 202 General meeting at 10:30AM on Jan 3, 202</p>
+                    <p class="posted-by">- Imee Duterte</p>
+                    
+                </li>
+                <li class="notification_item" data-detail="Another meeting detail here.">
+                    <p>Schedule Update <span>Yesterday</span></p>
+                    <p class="short-description">Another meeting detail here General meeting at 10:30AM on Jan 3, 202 General meet</p>
+                    <p class="posted-by">- John Doe</p>
+                </li>
+                <li class="notification_item" data-detail="Another meeting detail here.">
+                    <p>Schedule Update <span>Yesterday</span></p>
+                    <p class="short-description">Another meeting detail here</p>
+                    <p class="posted-by">- Sarah Marcos</p>
+                </li>
+                <li class="notification_item" data-detail="Another meeting detail here.">
+                    <p>Schedule Update <span>Yesterday</span></p>
+                    <p class="short-description">Another meeting detail here</p>
+                    <p class="posted-by">- Ginno Arostique</p>
+                </li>
+                <li class="notification_item" data-detail="Another meeting detail here.">
+                    <p>Schedule Update <span>Yesterday</span></p>
+                    <p class="short-description">Another meeting detail here</p>
+                    <p class="posted-by">- Ginno Arostique</p>
+                </li>
+            </ul>
+        </div>
+    </div>
       <!-- Detailed Notification -->
       <div id="detailed_notification" class="hidden">
-          <h2 id="notification_title">Schedule Update</h2>
+          <h2 id="notification_title">Schedule Update</h2><p class="notification_date">Yesterday, January 29, 2025</p>
+          <button id="close_detailed_notification" class="close-btn">&times;</button>
           <p id="notification_detail"></p>
-          <button id="close_detailed_notification">Close</button>
+          <p class="posted-by">- Imee Duterte, Team Head</p>
+          <button class="respond-btn">Respond</button>
       </div>
     </div>
 
