--- a/Arc_Ai/Arc_Ai/core/static/styles/styles.css
+++ b/Arc_Ai/Arc_Ai/core/static/styles/styles.css
@@ -397,6 +397,9 @@ body {
 
 .posted-by{
     margin: 0;
+    font-family: 'Arial', sans-serif;
+    font-size: 14px;
+    color: #888;
 }
 
 #detailed_notification.hidden {
