--- a/Arc_Ai/Arc_Ai/core/templates/core/login.html
+++ b/Arc_Ai/Arc_Ai/core/templates/core/login.html
@@ -1,4 +1,7 @@
 {% load static %}
+{% load socialaccount %}
+{% providers_media_js %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -35,13 +38,13 @@
                         <p>Continue With</p>
                     </div>
                     <div id="social_media">
-                        <button class="continue_with_button" type="button" onclick="window.location.href='/register/'">
+                        <button class="continue_with_button" type="button" onclick="window.location.href='{% provider_login_url 'google' %}'">
                             <img class="button_images" src="{% static 'Images/Google.png' %}" alt="Google">
                             <span>Sign in with Google</span>
                         </button>
-                        <button class="continue_with_button margin-top" type="button" onclick="window.location.href='/forgot-password/'">
+                        <button class="continue_with_button margin-top" type="button" onclick="window.location.href='/register/'">
                             <img class="button_images" src="{% static 'Images/Facebook.png' %}" alt="Facebook">
-                            <span>Sign in with Facebook</span>
+                            <span>Sign up with Facebook</span>
                         </button>
                     </div>
                 </form>
