--- a/Arc_Ai/Arc_Ai/core/static/styles/signup_details.css
+++ b/Arc_Ai/Arc_Ai/core/static/styles/signup_details.css
@@ -17,9 +17,9 @@ body {
 #container {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    width: 750px;
-    height: 500px;
+    justify-content: space-between;
+    width: 850px;
+    height: 650px;
     background: #fff;
     border-radius: 22px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);   
@@ -41,7 +41,7 @@ body {
     background: #353A56;
     box-shadow: -6px 0px 16.3px 0px rgba(0, 0, 0, 0.25);
     width: 400px;
-    height: 500px;
+    height: 650px;
 }
 
 #logo_container h1 {
@@ -101,7 +101,7 @@ body {
 
 #welcome_logo {
     align-items: center;
-    width: 210px;
+    width: 300px;
     height: auto;
     margin-top: 60px;
     display: block;
@@ -117,9 +117,46 @@ body {
     font-size: 12px;
     color: #777;
 }
+#active_profile_pic {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 200px;
+    height: 200.83px;
+    border-radius: 100%;
+    background: #ffffff;
+}
 
+#selected_profile_pic {
+    width: 200px;
+    height: auto;
+}
+
+#select_profile {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+}
 /*================================================== Classes */
+.profile_pic_cntr {
+    display: grid;
+    grid-template-columns: repeat(5, 70px); /* 5 items horizontally */
+    grid-template-rows: repeat(3, 70px); /* 3 items vertically */
+    justify-content: center;
+    align-content: center;
+    border-radius: 22px;
+    background: #353A56;
+    box-shadow: -6px 0px 16.3px 0px rgba(0, 0, 0, 0.25);
+    width: 400px;
+    height: 250px;
+}
 
+.profile_pic_option {
+    width: 60px;
+    height: auto;
+}
 .text_white {
     color: white;
     font-size: 20px;
