--- a/Arc_Ai/Arc_Ai/core/static/styles/saved.css
+++ b/Arc_Ai/Arc_Ai/core/static/styles/saved.css
@@ -22,3 +22,52 @@
     overflow-y: auto; /* Enable vertical scrolling */
     padding: 10px; /* Optional: Add padding for spacing */
 }
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-icon {
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    right: 0;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    font-family: 'Inter', sans-serif;
+}
+
+.show {
+    display: block;
+}
+
+.dropdown-divider {
+    margin: 5px 20px; /* Adjust the horizontal margin here (20px is just an example) */
+    border: 0;
+    border-top: 1px solid #ccc; /* Light gray line */
+}
+
+.horizontal-line {
+    flex-grow: 1; /* Make the line grow to fill the space */
+    height: 2px; /* Thickness of the line */
+    background-color: #ccc; /* Line color */
+    margin-left: 20px; /* Space between "Folders" and the line */
+    margin-right: 20px; /* Space between the line and dropdown button */
+}
+
+
