--- a/Arc_Ai/Arc_Ai/core/templates/core/saved.html
+++ b/Arc_Ai/Arc_Ai/core/templates/core/saved.html
@@ -109,6 +109,10 @@
             <!-- Horizontal Line Between Folders and Dropdown -->
             <div class="horizontal-line"></div>
             
+                <!-- {% for message in messages %}
+                <h3 style="color: red;">message</h3>
+                {% endfor %} -->
+
             <!-- Dropdown Button -->
             <img src="{% static 'Images/dots.png' %}" alt="Dropdown Icon" class="dropdown-icon" onclick="toggleDropdown()" style="width: 40px; height: 40px; cursor: pointer;">
             <div class="dropdown-content" id="myDropdown">
