--- a/Arc_Ai/Arc_Ai/core/templates/core/signup_details.html
+++ b/Arc_Ai/Arc_Ai/core/templates/core/signup_details.html
@@ -22,24 +22,24 @@
                     <div id="signin_form">
                         <h1 class="titles justify-center">Acount Setup</h1>
                         <div class="form-group">
-                            <label for="first-name">First Name:</label>
-                            <input type="first-name" id="first-name" name="first-name" required>
+                            <label for="first_name">First Name:</label>
+                            <input type="first_name" id="first_name" name="first_name" required>
                         </div>
                         <div class="form-group">
-                            <label for="middle-initial">Middle initial:</label>
-                            <input type="middle-initial" id="middle-initial" name="middle-initial" required>
+                            <label for="middle_name">Middle Name:</label>
+                            <input type="middle_name" id="middle_name" name="middle_name" required>
                         </div>
                         <div class="form-group">
-                            <label for="last-name">Last Name:</label>
-                            <input type="last-name" id="last-name" name="last-name" required>
+                            <label for="last_name">Last Name:</label>
+                            <input type="last_name" id="last_name" name="last_name" required>
                         </div>
                         <div class="form-group">
-                            <label for="complete-address">Complete Address:</label>
-                            <input type="complete-address" id="complete-address" name="complete-addess" required>
+                            <label for="complete_address">Complete Address:</label>
+                            <input type="complete_address" id="complete_address" name="complete_addess" required>
                         </div>
                         <div class="form-group">
-                            <label for="contact-number">Contact Number:</label>
-                            <input type="contact-number" id="contact-number" name="contact-number" required>
+                            <label for="contact_number">Contact Number:</label>
+                            <input type="contact_number" id="contact_number" name="contact_number" required>
                         </div>
                         <div id="age-gender-container">
                             <div class="form-group">
@@ -77,6 +77,16 @@
                         {% endfor %}
                     </div>
                 </div>
+
+                <script>
+                    function selectProfilePicture(img) {
+                        // Update the selected profile picture
+                        document.getElementById('selected_profile_pic').src = img.src;
+                
+                        // Save the selected image path in the hidden input field
+                        document.getElementById('profile_avatar').value = img.src;
+                    }
+                </script>
                     
                 <div id="main_logo">
                     <img id="welcome_logo" src="{% static 'Images/LogoV2.png' %}" alt="Arc.Ai Logo">
